# Clipboard

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
src/: main.cpp
src/core/: ClipboardItem.h  ClipboardMonitor.cpp  ClipboardMonitor.h  DatabaseManager.cpp  DatabaseManager.h
src/ui/: HistoryListDelegate.cpp  HistoryListDelegate.h  HistoryListModel.cpp  HistoryListModel.h  ImagePreviewWidget.cpp  ImagePreviewWidget.h  MainWindow.cpp  MainWindow.h
src/utils/: HotkeyManager.cpp  HotkeyManager.h
